# evocode

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
ai-runtime/: .dockerignore  .env.example  Dockerfile  pyproject.toml
ai-runtime/src/evocode_runtime/: main.py  models.py  run_service.py
ai-runtime/src/evocode_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-runtime/src/evocode_runtime/agents/: __init__.py  architect.py  review.py
ai-runtime/src/evocode_runtime/codegen/: __init__.py  generator.py
ai-runtime/src/evocode_runtime/graph/: __init__.py  builder.py  nodes.py  state.py
ai-runtime/src/evocode_runtime/llm/: __init__.py  factory.py  gateway.py  openai_provider.py  prompts.py  stub_provider.py
ai-runtime/src/evocode_runtime/pkg/: __init__.py  extractor.py  graph.py  store.py  verifier.py
ai-runtime/src/evocode_runtime/services/: __init__.py
ai-runtime/tests/: conftest.py  test_architect.py  test_codegen.py  test_extractor.py  test_fingerprint.py  test_graph.py  test_graph_analysis.py  test_health.py  test_openai_provider.py  test_project_graph.py  test_prompts.py  test_review.py  test_run_service.py  test_store.py  test_stub_provider.py  test_understand.py  test_understand_analysis.py  test_understand_cache.py  test_verifier.py
contracts/: README.md  intent.schema.json
control-plane/: .dockerignore  Dockerfile  pom.xml
docs/: README.md  RUNNING.md  WIRING.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
scripts/: demo.sh  dev.sh  start.ps1  (+1 more)
(+166 files in other folders)
