[project]
name = "evocode-runtime"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "langgraph==1.2.6",
  "langgraph-checkpoint-sqlite==3.1.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "httpx==0.28.1"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
